# ansible-my-collection

./: .ansible-lint-ignore  README.md  Taskfile.yml  galaxy.yml  pyproject.toml  requirements.yml
meta/: runtime.yml
roles/bat/: README.md
roles/bat/defaults/: main.yml
roles/bat/meta/: main.yml
roles/bat/tasks/: gather-facts.yml  install-packages.yml  main.yml
roles/bat/tests/: test.yml
roles/bat/vars/: main.yml
roles/baz/defaults/: main.yml
roles/baz/handlers/: main.yml
roles/baz/meta/: main.yml
roles/baz/tasks/: main.yml
roles/baz/tests/: test.yml
roles/baz/vars/: main.yml
roles/broot/: README.md
roles/broot/defaults/: main.yml
roles/broot/handlers/: main.yml
roles/broot/meta/: main.yml
roles/broot/tasks/: configuration.yml  gather-facts.yml  install-packages.yml  main.yml
roles/broot/templates/: conf.hjson.j2
roles/broot/tests/: test.yml
roles/broot/vars/: main.yml
roles/btop/: README.md
roles/btop/defaults/: main.yml
roles/btop/meta/: main.yml
roles/btop/tasks/: gather-facts.yml  install-packages.yml  main.yml
roles/btop/tests/: test.yml
roles/btop/vars/: main.yml
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: configuration.yml  install-packages.yml  main.yml
roles/docker/templates/: docker.sh.j2
roles/docker/tests/: test.yml
roles/docker/vars/: main.yml
roles/exa/: README.md
roles/exa/meta/: main.yml
roles/exa/tasks/: install-packages.yml  main.yml
roles/exa/tests/: test.yml
roles/exa/vars/: main.yml
roles/fish/: README.md
roles/fish/defaults/: main.yml
roles/fish/meta/: main.yml
roles/fish/tasks/: install-fish-plugins.yml  install-fish.yml  (+3 more)
roles/fzf/: README.md
roles/git/: .editorconfig  .gitattributes  README.md
roles/htop/: .editorconfig  .gitattributes  README.md
roles/lazydocker/: README.md
roles/mc/: README.md
roles/nano/: README.md
roles/ncdu/: README.md
roles/neovim/: README.md
roles/tmux/: README.md
roles/tmuxinator/: README.md
(+113 files in other folders)
